syntax = "proto3";
package pb;
option go_package = "/pb";

message blank{}

message OrderResponse {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

service OrderService {
  rpc ListOrders( blank ) returns (OrderList) {}
}
message OrderList {
    repeated OrderResponse orders = 1;
}